--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@tsparticles/react": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.4.3",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-particles": "^2.12.2",
